[package]
name = "winwin-common"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam = "0.8.4"
windows = { version = "0.57.0", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_Graphics", "Win32_Graphics_Gdi", "Win32_System_Threading", "Win32_Security", "Win32_System_LibraryLoader", "Win32_System_Diagnostics_Debug", "Win32_System_Memory", "Win32_System_WindowsProgramming" ] }
serde = { version = "1.0", features = ["derive"] }
