[package]
name = "hooks"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
windows = { version = "0.58.0", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_Graphics", "Win32_Graphics_Gdi", "Win32_System_Threading", "Win32_Security", "Win32_System_LibraryLoader", "Win32_System_Diagnostics_Debug", "Win32_System_Memory", "Win32_System_Pipes", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_System_SystemServices", "Win32_Graphics_Dwm" ] }
once_cell = "1.19.0"
winwin-common = { path = "../winwin-common" }
bincode = "1.3"
tracing = {version = "0.1", features = ["attributes"] }
tracing-appender = "0.2"
tracing-subscriber = "0.3"

